--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,21 +3,21 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/home"
         android:title="@string/black_circle" />
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/search"
         android:title="@string/black_circle" />
 
     <item
         android:id="@+id/navigation_download"
-        android:icon="@drawable/ic_download"
+        android:icon="@drawable/download"
         android:title="@string/black_circle" />
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/profile"
         android:title="@string/black_circle" />
 </menu>
