--- a/app/src/main/res/layout/podcast_listitem.xml
+++ b/app/src/main/res/layout/podcast_listitem.xml
@@ -72,12 +72,16 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         app:layout_constraintVertical_bias="0.55" />
 
-    <TextView
-        android:id="@+id/textView2"
+    <com.google.android.material.chip.Chip
+        app:rippleColor="@color/colorPrimaryDark"
+        app:chipBackgroundColor="@android:color/holo_blue_bright"
+        android:id="@+id/title"
         android:layout_width="220dp"
         android:layout_height="21dp"
         android:layout_marginTop="4dp"
         android:text="Art Design"
+        android:textColor="@color/black"
+        android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintHorizontal_bias="0.06"
@@ -96,11 +100,10 @@
         android:minLines="2"
         android:text="Women in Tech Product \n hosted by Exprese Degcore dddddd"
         android:textColor="@color/text_color_primary"
-        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintHorizontal_bias="0.076"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <ProgressBar
         android:id="@+id/progressBar"
