--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-<!--        <item name="colorPrimaryVariant">@color/primaryLightColor</item>-->
-<!--        <item name="colorOnPrimary">@color/primaryTextColor</item>-->
-<!--        <item name="colorSecondary">@color/secondaryColor</item>-->
-<!--        <item name="colorSecondaryVariant">@color/secondaryDarkColor</item>-->
-<!--        <item name="colorOnSecondary">@color/secondaryTextColor</item>-->
-<!--        <item name="android:fontFamily">@font/lobster_two</item>-->
-<!--        <item name="fontFamily">@font/lobster_two</item>-->
     </style>
 
 
