--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,16 +2,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:layout_marginBottom="?actionBarSize"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="mk.podcast.com.fragments.HomeFragment">
 
-     <androidx.recyclerview.widget.RecyclerView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-      tools:listitem="@layout/podcast_listitem"
-      android:id="@+id/podcast_recyclerview"/>
+     <com.google.android.material.appbar.AppBarLayout
+         android:id="@+id/app_bar"
+         android:layout_width="match_parent"
+         android:layout_height="540dp"
+         android:background="@color/white"
+         android:fitsSystemWindows="true"
+         android:theme="@style/AppTheme.AppBarOverlay">
 
+          <com.google.android.material.appbar.CollapsingToolbarLayout
+              android:id="@+id/toolbar_layout"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:fitsSystemWindows="true"
+              app:toolbarId="@+id/toolbar"
+              app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+              <include layout="@layout/podcast_appbar"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:fitsSystemWindows="false"
+                  app:layout_collapseMode="parallax"
+                  android:orientation="vertical"/>
+
+              <RelativeLayout
+                  android:layout_width="match_parent"
+                  android:layout_height="?attr/actionBarSize"
+                  android:gravity="center"
+                  android:fitsSystemWindows="true"
+                  app:layout_collapseMode="pin"
+                  android:layout_gravity="bottom"
+                  android:background="@color/white">
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:layout_height="match_parent"
+                      android:text="Up Next"
+                      android:gravity="center"
+                      android:layout_marginLeft="20dp"
+                      android:textSize="16sp"
+                      android:textStyle="bold"
+                      android:textColor="@color/black"/>
+                  <ImageView
+                      android:layout_width="40dp"
+                      android:layout_alignParentRight="true"
+                      android:layout_height="match_parent"
+                      android:layout_margin="5dp"
+                      android:src="@drawable/ic_more"/>
+
+              </RelativeLayout>
+
+              <androidx.appcompat.widget.Toolbar
+                  android:id="@+id/toolbar"
+                  android:layout_width="match_parent"
+                  android:layout_height="?attr/actionBarSize"
+                  app:layout_collapseMode="pin"
+                  app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+          </com.google.android.material.appbar.CollapsingToolbarLayout>
+     </com.google.android.material.appbar.AppBarLayout>
+
+   <include layout="@layout/app_content_scrolling"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
