add detail activity

--- a/app/src/main/res/layout/podcast_appbar.xml
+++ b/app/src/main/res/layout/podcast_appbar.xml
@@ -52,44 +52,7 @@
             android:layout_marginTop="25dp"
             android:orientation="vertical">
             <include layout="@layout/full_media_play_user_data_view"/>
-            <LinearLayout
-                android:layout_marginTop="20dp"
-                android:layout_gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:orientation="horizontal"
-                android:weightSum="5">
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:padding="10dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_baseline_skip_previous_24"/>
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="10dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_baseline_replay_10_24"/>
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="2dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_baseline_play_circle_filled_24"/>
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="10dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_baseline_forward_30_24"/>
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="10dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_baseline_skip_next_24"/>
-            </LinearLayout>
+            <include layout="@layout/custom_meida_controller_layout"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <TextView
