add empty viewpod

--- a/app/src/main/res/layout/app_content_scrolling.xml
+++ b/app/src/main/res/layout/app_content_scrolling.xml
@@ -5,10 +5,24 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/podcast_listitem"
-        android:id="@+id/podcast_recyclerview"/>
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:layout_height="match_parent">
+            <mk.padc.share.views.components.SmartRecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/podcast_listitem"
+                android:id="@+id/podcast_recyclerview"/>
+            <include android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:id="@+id/emptyViewPod"
+                layout="@layout/view_pod_empty"/>
+        </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
