--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="40dp"
         android:orientation="vertical">
         <TextView
             android:id="@+id/detail_title"
@@ -22,8 +22,7 @@
             android:textColor="@color/text_color_primary"
             android:textSize="20sp"
             android:maxLines="2"
-            android:ellipsize="end"
-            android:text="Designing for everyone, Every where with your self" />
+            android:ellipsize="end" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -36,10 +35,10 @@
                 android:textSize="10sp"
                 android:textColor="@color/text_color_primary"
                 android:textStyle="bold"
-                android:text="10m"
+                android:text=""
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:id="@+id/clock"
+                android:id="@+id/audio_time"
                 android:layout_weight="2"
                 android:padding="5dp"
                 android:layout_margin="4dp"
@@ -93,8 +92,7 @@
             android:textStyle="normal"
             android:textColor="@color/text_color_primary"
             android:textSize="16sp"
-            android:fontFamily="@font/contrail_one"
-            android:text="@string/large_text" />
+            android:fontFamily="@font/contrail_one" />
         <include layout="@layout/mini_video_player_layout" />
     </LinearLayout>
 
