--- a/app/src/main/res/layout/app_content_scrolling.xml
+++ b/app/src/main/res/layout/app_content_scrolling.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout app:layout_behavior="@string/appbar_scrolling_view_behavior"
+<androidx.constraintlayout.widget.ConstraintLayout
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_gravity="center"
@@ -15,17 +14,18 @@
             <include android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/emptyViewPod"
+                android:background="@color/orange_200"
                 android:visibility="gone"
                 layout="@layout/view_pod_empty"/>
             <mk.padc.share.views.components.SmartRecyclerView
-                android:layout_marginTop="?actionBarSize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="true"
+                android:background="@color/black"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/podcast_listitem"
                 android:id="@+id/podcast_recyclerview"/>
 
         </RelativeLayout>
-    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
