--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView android:elevation="5dp"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="20dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="160dp"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/category_cardview"
-    android:layout_margin="5dp"
+    android:layout_width="160dp"
     android:layout_height="180dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_margin="5dp"
+    android:elevation="5dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="20dp">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
+        android:id="@+id/category_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:id="@+id/category_image"
         android:src="@drawable/placeholder"/>
     <TextView
+        android:id="@+id/cateogry_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Blah Blah Blah \n Blah Blah Blah"
-        android:maxLines="2"
-        android:textSize="12sp"
         android:layout_alignParentBottom="true"
-        android:textColor="@color/text_color_primary"
-        android:gravity="center"
         android:layout_marginBottom="3dp"
-        android:id="@+id/cateogry_title"/>
+        android:gravity="center"
+        android:maxLines="2"
+        android:textColor="@color/text_color_primary"
+        android:textSize="12sp"/>
 
 </RelativeLayout>
 </androidx.cardview.widget.CardView>
