--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -88,7 +88,9 @@
             android:id="@+id/detail_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
+            android:layout_marginLeft="@dimen/text_margin"
+            android:layout_marginRight="@dimen/text_margin"
+            android:layout_marginTop="@dimen/text_margin"
             android:textStyle="normal"
             android:textColor="@color/text_color_primary"
             android:textSize="16sp"
@@ -96,6 +98,7 @@
         <include
             android:id="@+id/minimusicplayerviewpod"
             layout="@layout/custom_mini_music_playerview" />
+
     </LinearLayout>
 
 
