--- a/app/src/main/res/layout/custom_mini_music_playerview.xml
+++ b/app/src/main/res/layout/custom_mini_music_playerview.xml
@@ -2,7 +2,7 @@
 <mk.podcast.com.views.viewpods.MiniMusicPlayerViewPod xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="200dp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -28,6 +28,7 @@
                 android:weightSum="10">
 
                 <TextView
+                    android:id="@+id/mini_current_time"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -36,13 +37,13 @@
                     android:fontFamily="@font/contrail_one"
                     android:gravity="center"
                     android:padding="3dp"
-                    android:text="05:15"
+                    android:text="00:00"
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:textStyle="bold" />
 
-                <ProgressBar
-                    android:id="@+id/mini_player_progressbar"
+                <androidx.appcompat.widget.AppCompatSeekBar
+                    android:id="@+id/mini_seekbar"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -51,11 +52,12 @@
                     android:layout_weight="6"
                     android:indeterminateBehavior="repeat"
                     android:padding="4dp"
-                    android:progress="45"
+                    android:progress="0"
                     android:progressBackgroundTint="@color/white"
                     android:progressTint="@color/progress_color" />
 
                 <TextView
+                    android:id="@+id/mini_total_time"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -64,7 +66,7 @@
                     android:fontFamily="@font/contrail_one"
                     android:gravity="center"
                     android:padding="3dp"
-                    android:text="15:15"
+                    android:text="00:00"
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:textStyle="bold" />
