--- a/app/src/main/res/layout/custom_music_playerview.xml
+++ b/app/src/main/res/layout/custom_music_playerview.xml
@@ -83,7 +83,7 @@
             app:layout_constraintTop_toBottomOf="@+id/podcast_title" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/remainingTime"
             android:layout_width="65dp"
             android:layout_height="15dp"
             android:layout_marginTop="16dp"
@@ -102,10 +102,10 @@
             android:layout_height="8dp"
             android:layout_marginTop="20dp"
             android:indeterminateBehavior="repeat"
-            android:progress="45"
+            android:progress="0"
             android:progressBackgroundTint="@color/white"
             android:progressTint="@color/progress_color"
-            app:layout_constraintEnd_toStartOf="@+id/textView3"
+            app:layout_constraintEnd_toStartOf="@+id/remainingTime"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/podcast_description" />
