--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,11 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="mk.podcast.com.fragments.ProfileFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+<!--    <com.google.android.exoplayer2.ui.SimpleExoPlayerView-->
+<!--        android:id="@+id/video_view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:use_controller="false"-->
+<!--        app:show_timeout="10000"-->
+<!--        app:fastforward_increment="30000"-->
+<!--        app:rewind_increment="30000"-->
+<!--        app:controller_layout_id="@layout/exo_playback_control_view"/>-->
 </FrameLayout>
