--- a/app/src/main/res/layout/custom_music_playerview.xml
+++ b/app/src/main/res/layout/custom_music_playerview.xml
@@ -89,14 +89,14 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/contrail_one"
-            android:text="1 hour left"
+            android:text="00: 00"
             android:textColor="@color/progress_color"
             android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/podcast_description" />
 
-        <ProgressBar
-            android:id="@+id/progressBar2"
+        <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/mediseekbar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="190dp"
             android:layout_height="8dp"
