--- a/app/src/main/res/layout/custom_music_playerview.xml
+++ b/app/src/main/res/layout/custom_music_playerview.xml
@@ -99,8 +99,8 @@
             android:id="@+id/mediseekbar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="190dp"
-            android:layout_height="8dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="80dp"
             android:indeterminateBehavior="repeat"
             android:progress="0"
             android:progressBackgroundTint="@color/white"
