--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -3,30 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/category_cardview"
     android:layout_width="160dp"
-    android:layout_height="180dp"
+    android:layout_height="190dp"
     android:layout_margin="5dp"
     android:elevation="5dp"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="20dp">
-<RelativeLayout
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
         android:id="@+id/category_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="160dp"
         android:scaleType="fitXY"
         android:src="@drawable/placeholder"/>
+
     <TextView
         android:id="@+id/cateogry_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="3dp"
         android:gravity="center"
         android:maxLines="2"
+        android:layout_marginTop="3dp"
+        android:text="blah blah"
+        android:textStyle="bold"
+        android:fontFamily="@font/contrail_one"
         android:textColor="@color/text_color_primary"
-        android:textSize="12sp"/>
-
-</RelativeLayout>
+        android:textSize="16sp"/>
+</LinearLayout>
 </androidx.cardview.widget.CardView>
