--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -14,7 +14,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="420dp"
             android:layout_margin="5dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="20dp">
@@ -32,27 +32,27 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:layout_alignParentTop="true"
                     android:layout_margin="20dp"
-                    android:layout_alignParentTop="true">
+                    android:orientation="vertical">
                     <ImageView
                         android:id="@+id/category_main_image"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
-                        android:visibility="gone"
                         android:layout_gravity="center"
-                        android:src="@drawable/bulb"/>
+                        android:src="@drawable/bulb"
+                        android:visibility="gone"/>
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_marginLeft="10dp"
-                        android:layout_gravity="center"
-                        android:layout_marginRight="10dp"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
                         android:maxLines="2"
                         android:text=""
+                        android:textColor="@color/white"
                         android:textSize="18sp"
-                        android:textColor="@color/white"/>
+                        android:textStyle="bold"/>
                 </LinearLayout>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
@@ -60,7 +60,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_margin="10dp"
             android:fontFamily="@font/contrail_one"
             android:text="@string/explore_categories"
             android:textColor="@color/text_color_primary"
@@ -69,15 +69,17 @@
             <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-               <include android:layout_height="wrap_content"
+               <include android:id="@+id/search_emptyViewPod"
+                layout="@layout/view_pod_empty"
                 android:layout_width="match_parent"
-                android:id="@+id/search_emptyViewPod"
-                android:visibility="gone"
-                layout="@layout/view_pod_empty"/>
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
             <mk.padc.share.views.components.SmartRecyclerView
                 android:id="@+id/category_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/category_list_item" />
         </RelativeLayout>
