--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,13 +5,5 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="mk.podcast.com.fragments.ProfileFragment">
 
-<!--    <com.google.android.exoplayer2.ui.SimpleExoPlayerView-->
-<!--        android:id="@+id/video_view"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        app:use_controller="false"-->
-<!--        app:show_timeout="10000"-->
-<!--        app:fastforward_increment="30000"-->
-<!--        app:rewind_increment="30000"-->
-<!--        app:controller_layout_id="@layout/exo_playback_control_view"/>-->
+    <include layout="@layout/view_pod_empty"/>
 </FrameLayout>
