--- a/app/src/main/res/layout/podcast_appbar.xml
+++ b/app/src/main/res/layout/podcast_appbar.xml
@@ -7,13 +7,14 @@
     android:layout_height="430dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
+        android:layout_marginTop="3dp"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:gravity="center"
         android:background="@color/white">
 
         <ImageView
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="7dp"
             android:id="@+id/logoid"
             android:layout_width="40dp"
             android:layout_height="match_parent"
@@ -35,7 +36,7 @@
             android:layout_width="25dp"
             android:layout_alignParentRight="true"
             android:layout_height="match_parent"
-            android:layout_margin="6dp"
+            android:layout_margin="7dp"
             android:src="@drawable/ic_baseline_notifications_none_24"/>
 
     </RelativeLayout>
